# CMakeTemplateWinodws

./: CMakeLists.txt  main.cpp
Math/include/: log.h
Math/src/: log.cpp
